gcc-8 (8.3.0-4) UNRELEASED; urgency=medium

  * Update to SVN 20190318 (r269767) from the gcc-8-branch.
    - Fix PR tree-optimization/89546, PR target/89523 (x86), PR fortran/84394,
      PR fortran/66089, PR fortran/66695, PR fortran/77746, PR fortran/79485.
  * gcc-8-base: Breaks gnat-6 (<< 6.4) to ease upgrades. Closes: #924911.
  * Fix cross building gdc (Helmut Grohne). Closes: #925040.

 -- Matthias Klose <doko@debian.org>  Mon, 18 Mar 2019 17:42:26 +0100

gcc-8 (8.3.0-3) unstable; urgency=medium

  * Update to SVN 20190316 (r269720) from the gcc-8-branch.
    - Fix PR tree-optimization/89505, PR target/89517 (AArch64),
      PR bootstrap/89539, PR debug/88878, PR debug/89514,
      PR tree-optimization/89536, PR target/88100 (PPC), PR target/89397 (x86),
      PR target/89361 (S390), PR c++/89212, PR fortran/89077,
      PR fortran/77583, PR fortran/89174, PR fortran/87689, PR fortran/84387,
      PR fortran/89516, PR fortran/89492, PR fortran/89266, PR fortran/88326,
      PR libfortran/89020, PR target/88530 (AArch64), PR target/88530 (AArch64),
      PR ipa/88235, PR c++/88820, PR c++/88869, PR c++/88419, PR c++/88690,
      PR c++/87921, PR c++/89381, PR c++/89576, PR c++/89422, PR c++/87513,
      PR c++/88183, PR c++/89585, PR fortran/71544, PR fortran/87734,
      PR fortran/71203, PR fortran/72714, PR middle-end/89572, PR target/85860,
      PR middle-end/89677, PR middle-end/89497, PR tree-optimization/89296,
      PR tree-optimization/89664, PR rtl-optimization/89588, PR lto/88147,
      PR target/86952 (x86), PR lto/88147, PR fortran/87673, PR c++/89383,
      PR lto/87525, PR other/89712, PR testsuite/85368.
  * Backport libgo patches for the Hurd from the trunk (Svante Signell).
  * Add some more breaks to libstdc++6. Closes: #866354.

 -- Matthias Klose <doko@debian.org>  Sat, 16 Mar 2019 11:41:45 +0100

gcc-8 (8.3.0-2) unstable; urgency=medium

  * Fix the nvptx build.

 -- Matthias Klose <doko@debian.org>  Tue, 26 Feb 2019 09:26:57 +0100
