@@ -5,6 +5,7 @@ gcc-8 (8.3.0-4) UNRELEASED; urgency=medium
       PR fortran/66089, PR fortran/66695, PR fortran/77746, PR fortran/79485.
   * gcc-8-base: Breaks gnat-6 (<< 6.4) to ease upgrades. Closes: #924911.
   * Fix cross building gdc (Helmut Grohne). Closes: #925040.
+  * Fix package descriptions for cross packages.
 
  -- Matthias Klose <doko@debian.org>  Mon, 18 Mar 2019 17:42:26 +0100
 
